# tg_bot

./: .env  Cargo.toml  README.md  build.rs
proto/: api.proto
src/: main.rs  tg_bot.rs
src/auto_generate/: api.rs  mod.rs  tg_bot.rs
src/build_dispatcher/: commands.rs  create_chema.rs  mod.rs  other_msg_handler.rs
src/build_dispatcher/dialogues/: auth_handler.rs  dialogues.rs  global_handler.rs  mod.rs  select_wallets_handler.rs
src/client/: client.rs
src/myauthenticator/: mod.rs
