[package]
name = "tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
tonic = "0.9.2"
dotenv = "0.15.0"
prost = "0.11.9"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version =  "1.28.2", features = ["full"]}
google-authenticator = "0.4.2"
anyhow = "1.0.71"

[build-dependencies]
tonic-build = "0.9.2"